log
Thu 09 May 2024 03:15:46 PM UTC: 
 treemap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:41:9: error: ‘nuevo’ undeclared (first use in this function)
   41 |     if (nuevo == NULL) {
      |         ^~~~~
treemap.c:41:9: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:48:1: error: control reaches end of non-void function [-Werror=return-type]
   48 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
fea689b
Thu 09 May 2024 03:15:55 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:48:1: error: control reaches end of non-void function [-Werror=return-type]
   48 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
c0d2b90
Thu 09 May 2024 03:21:18 PM UTC: 
 treemap.c | 15 +++++++++------
 1 file changed, 9 insertions(+), 6 deletions(-)
 tests:  4|7
total_score: 5/70
5e599e5
Thu 09 May 2024 03:23:18 PM UTC: 
 treemap.c | 20 ++++++++++++++++++++
 1 file changed, 20 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:59:16: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   59 |     TreeNode * parent = NULL;
      |                ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
cc1cc5d
